added support for setting a preffered starting space each user individually, closes #461